lib_LTLIBRARIES = libesort.la
include_HEADERS = esort.h

libesort_la_LDFLAGS = -version-info @LTVERSION@
libesort_la_SOURCES = \
	Parameters.cpp Memory.cpp File.cpp Source.cpp Transaction.cpp \
	Merger.cpp Failer.cpp View.cpp Master.cpp DbMan.cpp \
	DbMan.h Failer.h File.h Master.h Memory.h Merger.h Source.h \
	Transaction.h View.h io.h
