AM_CPPFLAGS = -I$(top_srcdir)/libesort

noinst_LIBRARIES = libcommon.a
libcommon_a_SOURCES = \
	md5.cpp	Thread.cpp Keys.cpp CharsetEscape.cpp ConfigFile.cpp  \
	MessageId.cpp XmlEscape.cpp Search.cpp Summary.cpp \
	CharsetEscape.h ConfigFile.h Keys.h MessageId.h XmlEscape.h md5.h \
	Search.h Summary.h
